src/objects/Custom_Utility_Rate_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Maximum_Tier_Rate_Decrease__c</fullName>
        <label>Maximum Tier Rate Decrease</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Tier_Rate_Increase__c</fullName>
        <label>Maximum Tier Rate Increase</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Tier_Rate__c</fullName>
        <label>Maximum Tier Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Tier_Rate__c</fullName>
        <label>Minimum Tier Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <label>Custom Utility Rate Settings</label>
</CustomObject>